--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^17.0.0",
     "firebase": "^11.10.0",
+    "nanoid": "^5.1.5",
     "node-fetch": "^3.3.2"
   }
 }
