--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
   "dependencies": {
     "dotenv": "^17.0.0",
     "firebase": "^11.10.0",
+    "fkill": "^9.0.0",
     "nanoid": "^5.1.5",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "pidtree": "^0.6.0",
+    "systeminformation": "^5.27.7"
   }
 }
